# Django_Zifirka

./: .env.sample  catalog.json  pyproject.toml  services.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/includes/: post_card.html
catalog/: admin.py  create_groups.py  forms.py  models.py  urls.py  utils.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_initial.py
catalog/templates/: base.html  home.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_list.html  products_by_category.html
catalog/templates/catalog/includes/: headers.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: forms.py  settings.py  urls.py
durka_blog/: admin.py  apps.py  models.py  urls.py  views.py
durka_blog/templates/durka_blog/: base_durka.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
durka_blog/templates/durka_blog/includes/: inc_menu.html
durka_blog/templatetags/: durka_tags.py
management/commands/: test_product.py
newapp/: urls.py
static/css/: register.css
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html
